examples/test/testpolicy2738.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2738
  namespace: namespace490
spec:
  podSelector:
    matchLabels:
      key36: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value5
      podSelector:
        matchLabels:
          key40: value23
          key46: value15
          key24: value16
